Closed Bug 101890 Opened 23 years ago Closed 22 years ago

break linkage from transformiix to layout

Categories

(Core :: XSLT, defect, P4)

defect

Tracking

()

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: jonsmirl, Assigned: peterv)

References

Details

Attachments

(1 file, 2 obsolete files)

patch removes linkage from transformiix to layout. transformiix was using layoutcid.h to define NS_DOM_IMPLEMENTATION_CID. DOMImplementation actually is implementent in contentcid.h. layoutcid.h should probably not include a define for it. Also removed old raptor references from makefiles.
Attached patch remove layout linkage (obsolete) — Splinter Review
Blocks: 100107
Comment on attachment 51037 [details] [diff] [review] remove layout linkage r=axel@pike.org, thanks for doing this
Attachment #51037 - Flags: review+
Comment on attachment 51037 [details] [diff] [review] remove layout linkage pfff on me, that patch doesn't change the Makefile.in's yet
Attachment #51037 - Flags: review+
Comment on attachment 51037 [details] [diff] [review] remove layout linkage actually, can you remove -I entries in LINCS that refer to $(PUBLIC)\<something>? I thought I caught most of those but we're trying to avoid using LINCS for anything other than fairly local (i.e. relative) includes
As far as I can tell the only thing still using raptor is the SVG support. I just removed them because I thought what they were referencing was gone. What would be a reason for keeping them?
raptor is dead - it isn't used anywhere.. I meant if you could remove the "-I$(PUBLIC)\xpcom" and similar entries from the LINCS lines
How did this work for you? mozilladom.h include nsIDocument.h which includes nslayout.h. Hrm.
I agree, patch fails now. Something has changed in the last three week making it invalid. I'll try and fix it again.
Ok, there is nothing wrong with this patch. I do need to make a new bug for removing the unneeded linkage between nsIDocument.h and nslayout.h. I'll attach it to this one in a few minutes.
Depends on: 104316
Whiteboard: fix in hand
Blocks: 106686
No longer blocks: 100107
can we really do this now that the outputhandler does some specialhandling of for style-elements? Or is that done by just talking to content?
Taking.
Assignee: keith → peterv
Priority: -- → P4
Target Milestone: --- → mozilla1.2alpha
Attached patch Remove layout dependency (obsolete) — Splinter Review
I cleaned up some REQUIRES, removed Nodestack.* since it's not used anywhere and cleaned up some includes. Looking for review.
Attachment #51037 - Attachment is obsolete: true
(You can ignore the makefile.win changes, I removed them from my tree.)
Status: NEW → ASSIGNED
Also remove unused NodeStack and JavaScript linkage on Mac.
Attachment #95765 - Attachment is obsolete: true
Comment on attachment 95777 [details] [diff] [review] Remove layout dependency r=axel@pike.org
Attachment #95777 - Flags: review+
Comment on attachment 95777 [details] [diff] [review] Remove layout dependency sr=jst
Attachment #95777 - Flags: superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified. Note: the widget deps comes from nsIDocument, in case someone else but me wonders
Status: RESOLVED → VERIFIED
Whiteboard: fix in hand
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: