Fix for bug 101890 (break linkage from transformiix to layout). r=Pike, sr=jst.